--- a/build.gradle
+++ b/build.gradle
@@ -38,18 +38,19 @@ repositories {
 
 	maven { url "https://plugins.gradle.org/m2/" }
 
+	/*
 	flatDir {
 		dirs System.properties['user.home'] + '/wpilib/java/current/lib'
 	}
+	*/
 }
 
 dependencies {
 	compile 'com.google.protobuf:protobuf-java:3.0.0'
 	compile 'io.grpc:grpc-stub:1.0.0-pre2'
 	compile 'io.grpc:grpc-protobuf:1.0.0-pre2'
-	testCompile group: 'junit', name: 'junit', version: '4.11'
-	compile name: "NetworkTables"
-	compile name: "WPILib"
+	compile group: 'edu.wpi.first.wpilibj', name: 'wpilibJavaFinal', version: '0.1.0-SNAPSHOT'
+	compile group: 'edu.wpi.first.wpilib.networktables.java', name: 'NetworkTables', version: '3.0.0-SNAPSHOT'
 	compile project(':449-central-repo')
 }
 
