Removed maps and renamed super fields.

--- a/src/main/resources/map.cfg
+++ b/src/main/resources/map.cfg
@@ -1,5 +1,5 @@
 oi {
-    super {}
+    oi {}
     deadband: 0.02
     power: 2
     max_value: 1
@@ -35,10 +35,10 @@ oi {
     face_right_goal: 10
 }
 drive {
-    super {}
+    drive {}
     left_cluster {
-        super {
-            super {
+        velocity_PID {
+            PID {
                 p: 0.4
                 i: 0
                 d: 0
@@ -76,8 +76,8 @@ drive {
         }
     }
     right_cluster {
-        super {
-            super {
+        velocity_PID {
+            PID {
                 p: 0.4
                 i: 0
                 d: 0
@@ -115,7 +115,7 @@ drive {
         }
     }
     angle_PID {
-        super {
+        PID {
             p: 0.006
             i: 0
             d: 0
@@ -127,7 +127,7 @@ drive {
         minimum_output_enabled: true
     }
     drive_straight_angle_PID {
-    	super {
+    	PID {
 			p: 0.01
 			i: 0
 			d: 0
@@ -141,7 +141,7 @@ drive {
     radius: 12
 }
 intake {
-	super {}
+	mechanism {}
 	motor {
 		port: 3
 		inverted: false
@@ -174,7 +174,7 @@ intake {
     }
 }
 breach {
-	super {}
+	mechanism {}
 	front {
 		forward: 7
 		reverse: 6
